[package]
name = "ddns-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
dirs = "5.0"
lazy_static = "1.4.0"
anyhow = "1.0.81"
thiserror = "1.0.58"
ring = "0.17.8"
chrono = "0.4.35"
